# Broker

./: CMakeLists.txt  README.md  main.cpp
Source/: BiblicalMarriage.cpp  BiblicalMarriage.h  SquashGame.cpp  SquashGame.h
Source/interface/: Relationship.cpp  Relationship.h  RelationshipRole.cpp  RelationshipRole.h  Role.cpp  Role.h
